--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@500&display=swap');
     font-family: 'Karla', sans-serif;
     color: #FFFFFF;
+    overflow-x: hidden;
 }
 
 a {
@@ -93,13 +94,13 @@ h1, h2, h3, h4, h5, h6 {
     width: 40px;
     height: 40px;
     border-radius: 4px;
-    background: black;
+    background: #e6760e;
     color: #fff;
     transition: all 0.4s;
 }
 
 .back-to-top i:hover {
-    background: black;
+    background: #e6760e;
     color: #fff;
 }
 
@@ -538,6 +539,8 @@ h1, h2, h3, h4, h5, h6 {
     position: relative;
 }
 
+
+
 #hero:before {
     content: "";
     background: rgba(255, 255, 255, 0.4);
@@ -561,7 +564,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero h1 {
     margin: 0;
-    font-size: 48px;
+    font-size: 60px;
     font-weight: 700;
     line-height: 56px;
     color: #222222;
@@ -657,6 +660,145 @@ h1, h2, h3, h4, h5, h6 {
         height: 120vh;
     }
 }
+
+
+
+/*--------------------------HERO 1------------------------------------*/
+
+#hero1{
+
+    width: 100%;
+    height: 50vh;
+    background: url("../img/FullStack_PEO.jpg") top left;
+    background-size: cover;
+    position: relative;
+}
+
+#hero1:before {
+    content: "";
+    background: rgba(255, 255, 255, 0.4);
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+#hero1 .container {
+    position: relative;
+    padding-top: 132px;
+}
+
+@media (max-width: 992px) {
+    #hero1 .container {
+        padding-top: 58px;
+    }
+}
+
+#hero1 h1 {
+    margin: 0;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 56px;
+    color: #222222;
+    font-family: "Poppins", sans-serif;
+}
+
+#hero1 h1 span {
+    color: #106eea;
+}
+
+#hero1 h2 {
+    color: #555555;
+    margin: 5px 0 30px 0;
+    font-size: 24px;
+    font-weight: 400;
+}
+
+#hero1 .btn-get-started {
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 10px 28px;
+    border-radius: 4px;
+    transition: 0.5s;
+    color: #fff;
+    background: #106eea;
+}
+
+#hero1 .btn-get-started:hover {
+    background: #247cf0;
+}
+
+#hero1 .btn-watch-video {
+    font-size: 16px;
+    display: inline-block;
+    padding: 10px 25px 8px 40px;
+    transition: 0.5s;
+    margin-left: 25px;
+    color: #222222;
+    position: relative;
+    font-weight: 600;
+}
+
+#hero1 .btn-watch-video i {
+    color: #106eea;
+    font-size: 32px;
+    position: absolute;
+    left: 0;
+    top: 7px;
+    transition: 0.3s;
+}
+
+#hero1 .btn-watch-video:hover {
+    color: #106eea;
+}
+
+#hero1 .btn-watch-video:hover i {
+    color: #3b8af2;
+}
+
+@media (min-width: 1024px) {
+    #hero1 {
+        background-attachment: fixed;
+    }
+}
+
+@media (max-width: 768px) {
+    #hero1 {
+        height: 100vh;
+    }
+
+    #hero1 h1 {
+        font-size: 28px;
+        line-height: 36px;
+    }
+
+    #hero1 h2 {
+        font-size: 18px;
+        line-height: 24px;
+        margin-bottom: 30px;
+    }
+
+    #hero1 .btn-get-started, #hero1 .btn-watch-video {
+        font-size: 13px;
+    }
+}
+
+@media (max-height: 500px) {
+    #hero1 {
+        height: 120vh;
+    }
+}
+
+
+
+
+
+
 
 /*--------------------------------------------------------------
 # Sections General
@@ -964,10 +1106,15 @@ section {
 /*--------------------------------------------------------------
 # Clients
 --------------------------------------------------------------*/
+#sobreNosTexto{
+    color: #3c3c3c;
+}
+
+
 .clients {
-    padding: 15px 0;
-    text-align: center;
+
     background-color: #FFFFFF;
+    color: #3c3c3c;
 }
 
 .clients img {
