--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1756,7 +1756,7 @@ section {
     color: #106eea;
     border-radius: 50%;
     padding: 8px;
-    border: 2px dotted #b3d1fa;
+    border: 2px dotted orange;
 }
 
 .contact .info-box h3 {
@@ -1847,7 +1847,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-    background: #106eea;
+    background: black;
     border: 0;
     padding: 10px 30px;
     color: #fff;
@@ -1856,7 +1856,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-    background: #3b8af2;
+    background: orange;
 }
 
 @-webkit-keyframes animate-loading {
